[package]

name = "jsonway"
version = "1.0.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
description = "JSON building DSL and configurable serializers for Rust"
repository = "https://github.com/rustless/jsonway"
documentation = "http://rustless.org/rustless/doc/jsonway/"
keywords = ["json", "serializers"]
license = "MIT"

[dependencies]
serde = "0.7"
serde_json = "0.7"

[[test]]
name = "tests"
